--- a/styles.css
+++ b/styles.css
@@ -1373,7 +1373,7 @@ margin-top: -190px;
     font-size: 24px;
     text-align: start;
     margin-bottom: 10px;
-    color: #7eff00;
+    color: #97e92d;
 }
 .supporters-card-grid p {
     text-align: left;
